fix(web-components): added wrap to interaction-container to stack buttons zoomed in
Added flex-wrap: wrap to stack buttons if IcHero is zoomed in 200%+

594

--- a/packages/web-components/src/components/ic-hero/ic-hero.css
+++ b/packages/web-components/src/components/ic-hero/ic-hero.css
@@ -55,6 +55,7 @@ ic-typography.heading-bottom-spacing {
   display: flex;
   gap: var(--ic-space-md);
   margin-top: var(--ic-space-lg);
+  flex-wrap: wrap;
 }
 
 .secondary-container {
